--- a/ac-front-end/src/styles/Profile/Profile.css
+++ b/ac-front-end/src/styles/Profile/Profile.css
@@ -26,11 +26,12 @@ Authors:
   width: -webkit-fill-available;
 }
 .prfl-container {
-  display: grid;
+  display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 4rem;
-  grid-template-columns: 1fr 1fr;
+  gap: 3rem;
+  /* column-gap: 4rem;
+  grid-template-columns: 1fr 1fr; */
 }
 
 .prfl-return-link {
