--- a/ac-front-end/src/styles/AgentMain/ThirdParty.css
+++ b/ac-front-end/src/styles/AgentMain/ThirdParty.css
@@ -10,7 +10,7 @@ Authors:
   flex-direction: column;
   gap: 1.5rem;
   overflow-y: auto;
-  white-space: nowrap;
+  /*white-space: nowrap;*/
   width: 35rem;
   height: 65rem;
   overflow-y: auto;
