--- a/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
+++ b/ac-front-end/src/styles/Recordings/AgentFeedbackCard.css
@@ -11,7 +11,10 @@ Authors:
   overflow: hidden;
   font-size: 1.5rem;
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 8%);
-  /* height: 55rem; */
+  height: 35rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* margin: 3rem 0 3rem 0; */
 }
 
@@ -20,7 +23,7 @@ Authors:
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 3rem;
   color: white;
   padding: 2rem;
 }
@@ -70,6 +73,11 @@ Authors:
   width: 100%;
 }
 
+.afc-comment {
+  align-self: start;
+  color: var(--text-color);
+}
+
 .afc-send-btn {
   width: 100%;
   font-size: 2rem;
@@ -81,6 +89,7 @@ Authors:
   cursor: pointer;
   color: var(--text-color);
   margin-top: 1rem;
+  border: none;
 }
 .afc-send-btn:hover {
   transform: translateY(-3px);
