--- a/ac-front-end/src/styles/AgentQualityControl/AgentQualityControl.css
+++ b/ac-front-end/src/styles/AgentQualityControl/AgentQualityControl.css
@@ -3,15 +3,17 @@
 .aqc-main-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   background-color: var(--main-card-background);
   border-radius: 10px;
   margin: 1rem 2rem 2rem 100px;
+  height: max-content;
+  min-height: 85vh;
 }
 
 .aqc-container {
   display: grid;
-  column-gap: 3rem;
+  column-gap: 2rem;
   grid-template-columns: 1fr 30rem;
 }
 
