--- a/ac-front-end/src/styles/Recordings/RecordingsCard.css
+++ b/ac-front-end/src/styles/Recordings/RecordingsCard.css
@@ -20,6 +20,22 @@ Authors:
   min-height: 20rem;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .rec-container {
   display: flex;
   flex-direction: column;
@@ -89,11 +105,14 @@ Authors:
 
 .rec-tag-section {
   display: grid;
-  grid-template-columns: 1fr;
+  /* grid-template-columns: 1fr; */
   grid-auto-flow: column;
   column-gap: 2rem;
   row-gap: 1rem;
   margin-bottom: 1rem;
+  margin-top: 1rem;
+  overflow-x: auto;
+  padding: 1rem 0 1rem 0;
 }
 
 .rec-tag {
@@ -106,6 +125,7 @@ Authors:
   color: var(--text-color);
   border-radius: 8px;
   cursor: pointer;
+  width: max-content;
 }
 
 /* TAGS */
@@ -130,11 +150,19 @@ Authors:
   background-color: var(--other-orange-color);
 }
 
-.c-neutral-to-positive {
+/* .c-neutral-to-positive {
   background-color: var(--other-brown-color);
 }
 
 .c-neutral-to-negative {
+  background-color: var(--other-purple-color);
+} */
+
+.ended-positive {
+  background-color: var(--other-brown-color);
+}
+
+.ended-negative {
   background-color: var(--other-purple-color);
 }
 
@@ -162,7 +190,7 @@ Authors:
   background-color: var(--other-purple-color);
 }
 
-.inssurance {
+.insurance {
   background-color: burlywood;
 }
 
@@ -188,6 +216,11 @@ Authors:
 }
 
 .third-party-services {
+  background-color: coral;
+}
+
+.transfer {
+  background-color: var(--online-color);
 }
 
 /*Media queries for AllAgentList*/
