Added rating chart in single agent

--- a/ac-front-end/src/styles/AgentList/SingleAgent.css
+++ b/ac-front-end/src/styles/AgentList/SingleAgent.css
@@ -28,6 +28,10 @@ Authors:
   margin-top: 2rem;
 }
 
+.sa-rating-chart {
+  width: 45%;
+}
+
 .sa-profile-picture {
   height: 14rem;
   width: auto;
