filter in recordings finished

--- a/ac-front-end/src/styles/Recordings/RecordingsVideo.css
+++ b/ac-front-end/src/styles/Recordings/RecordingsVideo.css
@@ -38,8 +38,8 @@ Authors:
   border: none;
 }
 .rev-video {
-  width: 100rem;
-  height: 60rem;
+  /* width: 100rem;
+  height: 60rem; */
   border-radius: 11px;
   align-self: start;
 }
