--- a/ac-front-end/src/styles/Recordings/AboutCard.css
+++ b/ac-front-end/src/styles/Recordings/AboutCard.css
@@ -4,14 +4,19 @@ Authors:
 /* Iniitals abc */
 
 .abc-main-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   width: 30rem;
+  height: 60rem;
   color: white;
   background-color: var(--sub-card-background);
   border-radius: 10px;
   overflow: hidden;
   font-size: var(--sub-option-text);
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 8%);
-  height: 60rem;
+  /* margin-top: 2rem; */
+  padding: 2rem 1rem;
 }
 
 .abc-container {
