--- a/ac-front-end/src/styles/Recordings/RecordingsChart.css
+++ b/ac-front-end/src/styles/Recordings/RecordingsChart.css
@@ -4,14 +4,18 @@ Authors:
 /* Iniitals recc */
 
 .recc-main-container {
-  /* width: 60rem; */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 30rem;
+  /* height: 60rem; */
   color: white;
   background-color: var(--sub-card-background);
   border-radius: 10px;
   overflow: hidden;
   font-size: var(--sub-option-text);
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 8%);
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
   padding: 2rem 1rem;
 }
 
@@ -33,6 +37,7 @@ Authors:
 
 .recc-title {
   font-size: var(--option-text);
+  color: var(--text-color);
   text-align: center;
   margin-bottom: 1rem;
 }
