--- a/ac-front-end/src/index.css
+++ b/ac-front-end/src/index.css
@@ -10,6 +10,23 @@ Authors:
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 :root {
   --background-dark: #233445;
   --background-light: #fafafa;
