--- a/ac-front-end/src/styles/Recordings/Recordings.css
+++ b/ac-front-end/src/styles/Recordings/Recordings.css
@@ -48,10 +48,19 @@ Authors:
 }
 
 .re-btn {
-  color: var(--text-color);
-  background-color: var(--sub-card-background);
+  color: white;
+  background-color: #415164;
   border-radius: 0 10px 10px 0;
   cursor: pointer;
+}
+
+.re-no-recordings {
+  justify-self: center;
+  text-align: center;
+  font-size: var(--sub-title);
+  grid-column: 2 / 3;
+  color: var(--text-color);
+  margin: 3rem;
 }
 
 /*Media queries for Recordings*/
