--- a/ac-front-end/src/styles/AgentList/AgentListMenu.css
+++ b/ac-front-end/src/styles/AgentList/AgentListMenu.css
@@ -24,6 +24,9 @@ Authors:
   display: flex;
   margin: 4.5rem 1rem 1rem 0;
   padding-right: 1rem;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .aglm-add {
@@ -56,7 +59,23 @@ Authors:
   width: 30rem;
   background-color: var(--sub-card-light);
 }
-
+.aglm-refresh-btn {
+  background-color: var(--highlight-color);
+  font-size: var(--sub-option-text);
+  font-weight: bold;
+  color: var(--text-color);
+  border: none;
+  border-radius: 6px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 2rem;
+}
+.aglm-refresh {
+  margin-left: 2rem;
+  font-size: var(--option-text);
+}
 .aglm-select {
   font-size: var(--option-text);
   font-weight: bold;
