--- a/ac-front-end/src/styles/AgentList/SingleAgent.css
+++ b/ac-front-end/src/styles/AgentList/SingleAgent.css
@@ -27,6 +27,7 @@ Authors:
   align-items: center;
   gap: 1rem;
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .sa-rating-chart {
@@ -96,7 +97,7 @@ Authors:
   /* display: block; */
   padding: 1rem 0.6rem 0.6rem 1.2rem;
   border: none;
-  font-size: 2rem;
+  font-size: var(--sub-option-text);
   border-radius: 10px;
   border: 2px solid var(--highlight-color) !important;
   /* transition: width 0.4s ease-in-out; */
