--- a/ac-front-end/src/styles/Recordings/Recordings.css
+++ b/ac-front-end/src/styles/Recordings/Recordings.css
@@ -21,12 +21,20 @@ Authors:
   align-items: center;
   margin: 3rem 0 3rem 0;
 }
-
-.re-search-container {
+.re-menu-container {
   display: flex;
-  grid-column: 1 / -1;
+  grid-column: 1/ -1;
   /* gap: 1.5rem; */
   justify-self: end;
+  width: 100%;
+}
+.re-search-container {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: flex-end;
+  flex-wrap: nowrap;
+  width: 100%;
 }
 
 .re-input {
@@ -61,6 +69,27 @@ Authors:
   grid-column: 2 / 3;
   color: var(--text-color);
   margin: 3rem;
+}
+
+.re-search {
+  font-size: var(--option-text);
+  border-radius: 0px 6px 6px 0px;
+  width: 35rem;
+  background-color: var(--sub-card-light);
+}
+
+.re-refresh-btn {
+  background-color: var(--highlight-color);
+  font-size: var(--sub-option-text);
+  font-weight: bold;
+  color: var(--text-color);
+  border: none;
+  border-radius: 6px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 2rem;
 }
 
 /*Media queries for Recordings*/
