--- a/ac-front-end/src/styles/AgentList/AgentListMenu.css
+++ b/ac-front-end/src/styles/AgentList/AgentListMenu.css
@@ -71,6 +71,13 @@ Authors:
   justify-content: center;
   align-items: center;
   margin-left: 2rem;
+  cursor: pointer;
+}
+.aglm-refresh-btn:hover {
+  transform: translateY(-3px);
+  transition: 0.3s ease-out;
+  opacity: 0.9;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 .aglm-refresh {
   margin-left: 2rem;
