--- a/ac-front-end/src/styles/AgentMain/ThirdParty.css
+++ b/ac-front-end/src/styles/AgentMain/ThirdParty.css
@@ -26,7 +26,7 @@ Authors:
 }
 
 .tp-main-container::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #00000000;
 }
 
 .tp-main-container::-webkit-scrollbar-thumb {
@@ -48,10 +48,9 @@ Authors:
   font-size: var(--sub-title);
   /* font-size: 3rem; */
   font-weight: bold;
-  padding: 1rem;
+  padding: 1rem 0;
   text-align: center;
-  grid-column: 1 / -1;
-  margin-top: 4rem;
+  margin-top: 1rem;
 }
 .tp-button {
   /* display: flex; */
@@ -61,6 +60,7 @@ Authors:
   align-self: center;
   justify-self: center;
 }
+
 .tp-image {
   width: 9rem;
   height: 9rem;
@@ -120,11 +120,12 @@ Authors:
   width: 100%;
   border: 2px solid var(--highlight-color) !important;
 }
+
 .tp-submit-button {
   display: flex;
   background-color: var(--highlight-color);
   color: var(--text-color);
-
+  width: 100%;
   font-size: var(--option-text);
   font-weight: bold;
   padding: 1rem;
@@ -136,6 +137,14 @@ Authors:
   align-items: center;
   justify-content: center;
 }
+
+.tp-submit-button:hover {
+  transform: translateY(-3px);
+  transition: 0.3s ease-out;
+  opacity: 0.9;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
 .tp-order {
   display: grid;
 
@@ -161,40 +170,71 @@ Authors:
   justify-content: center;
 }
 .tp-confirmation {
-  background-color: var(--highlight-color);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  /* background-color: var(--highlight-color); */
   color: var(--text-color);
   font-size: var(--option-text);
   width: 32rem;
-  height: 60rem;
+  /* height: 60rem; */
   border-radius: 10px;
+  margin-bottom: 2rem;
 }
 
-.tp-confirmation-text {
+.tp-confirmation-container {
   display: flex;
   background-color: var(--main-card-background);
   color: var(--text-color);
   font-size: var(--option-text);
   width: 30rem;
-  height: 43rem;
-  margin-top: 3rem;
+  padding: 2rem;
   border-radius: 10px;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   word-break: break-all;
   word-wrap: break-word;
   flex-direction: column;
   gap: 1rem;
 }
+
+.tp-confirmation-text {
+  font-weight: 100;
+  margin-bottom: 4rem;
+}
+
+/* .lgf-button {
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 1rem;
+  background-color: var(--highlight-color-default);
+  color: var(--text-color-dark);
+  margin-top: 2rem;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.lgf-button:hover {
+  transform: translateY(-3px);
+  transition: 0.3s ease-out;
+  opacity: 0.9;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+} */
+
 .tp-confirmation-button {
   width: 15rem;
   height: 5rem;
   border-radius: 10px;
 }
-.tp-confirmation-button-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+.tp-confirmation-button:hover {
+  transform: translateY(-3px);
+  transition: 0.3s ease-out;
+  opacity: 0.9;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
+
 .tp-order-list {
   display: flex;
   flex-direction: column;
