--- a/ac-front-end/src/styles/Recordings/RecordingsCard.css
+++ b/ac-front-end/src/styles/Recordings/RecordingsCard.css
@@ -114,7 +114,7 @@ Authors:
   column-gap: 2rem;
   row-gap: 1rem;
   margin-bottom: 1rem;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   overflow-x: auto;
   padding: 1rem 0 1rem 0;
 }
