--- a/ac-front-end/src/styles/AgentList/SingleAgent.css
+++ b/ac-front-end/src/styles/AgentList/SingleAgent.css
@@ -143,7 +143,7 @@ Style to display HTML elements for SingleAgent.js.
 /*****************************/
 @media (max-height: 47em) {
   .sa-main-container {
-    min-height: 45rem;
+    height: 45rem;
   }
 }
 
@@ -152,6 +152,6 @@ Style to display HTML elements for SingleAgent.js.
 /*****************************/
 @media (max-height: 42.5em) {
   .sa-main-container {
-    min-height: 40rem;
+    height: 40rem;
   }
 }
