progress in Single Agent

--- a/ac-front-end/src/styles/AgentList/AgentListMenu.css
+++ b/ac-front-end/src/styles/AgentList/AgentListMenu.css
@@ -31,23 +31,11 @@ Style to display HTML elements for AgentListMenu.js.
 
 .aglm-search-container {
   display: flex;
-  margin: 4.5rem 1rem 1rem 0;
+  margin: 3.5rem 1rem 1rem 0;
   padding-right: 1rem;
   align-items: center;
   width: 100%;
   justify-content: space-between;
-}
-
-.aglm-add {
-  font-size: var(--option-text);
-  font-weight: bold;
-  border-color: transparent;
-  padding: 1.2rem;
-  color: white;
-  background-color: #415164;
-  border-radius: 10px;
-  margin: 3.5rem auto 1rem 1rem;
-  cursor: pointer;
 }
 
 .aglm-search-btn {
@@ -68,6 +56,8 @@ Style to display HTML elements for AgentListMenu.js.
   width: 30rem;
   background-color: var(--sub-card-light);
 }
+
+.aglm-add,
 .aglm-refresh-btn {
   background-color: var(--highlight-color);
   font-size: var(--sub-option-text);
@@ -75,20 +65,31 @@ Style to display HTML elements for AgentListMenu.js.
   color: var(--text-color);
   border: none;
   border-radius: 6px;
-  height: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 2rem;
   cursor: pointer;
+  width: 15rem;
+  height: 4rem;
 }
-.aglm-refresh-btn:hover {
+
+.aglm-refresh-btn:hover,
+.aglm-add:hover {
   transform: translateY(-3px);
   transition: 0.3s ease-out;
   opacity: 0.9;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
-.aglm-refresh {
+
+.aglm-add {
+  color: white;
+  margin: 3.5rem auto 1rem 1rem;
+  cursor: pointer;
+  width: 18rem;
+}
+
+.aglm-add-icon,
+.aglm-refresh-icon {
   margin-left: 2rem;
   font-size: var(--option-text);
 }
@@ -127,6 +128,15 @@ Style to display HTML elements for AgentListMenu.js.
 /*****************************/
 @media (max-height: 47em) {
   .aglm-search-container {
-    margin: 3.5rem 1rem 1rem 0;
+    height: 45rem;
+  }
+}
+
+/*****************************/
+/* BELOW 42.5*16 = 680px (Very Small desktops) */
+/*****************************/
+@media (max-height: 42.5em) {
+  .aglm-search-container {
+    height: 40rem;
   }
 }
