--- a/ac-front-end/src/styles/Recordings/AboutCard.css
+++ b/ac-front-end/src/styles/Recordings/AboutCard.css
@@ -13,18 +13,16 @@ Style to display HTML elements for AboutCard.js.
 /* Iniitals abc */
 .abc-main-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   width: 30rem;
   height: 60rem;
   color: white;
   background-color: var(--sub-card-background);
   border-radius: 10px;
-  overflow: hidden;
   font-size: var(--sub-option-text);
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 8%);
-  /* margin-top: 2rem; */
-  padding: 2rem 1rem;
+  /* padding: 2rem 1rem; */
+  overflow-y: auto;
 }
 
 .abc-container {
@@ -32,7 +30,7 @@ Style to display HTML elements for AboutCard.js.
   flex-direction: column;
   gap: 1rem;
   color: var(--text-color);
-  padding: 2rem;
+  padding: 3rem;
 }
 
 .abc-navbar {
@@ -50,13 +48,17 @@ Style to display HTML elements for AboutCard.js.
 }
 
 .abc-title:nth-child(2) {
+  /* font-size: var(--sub-option-text); */
   color: var(--highlight-color);
   cursor: pointer;
 }
 
-.abc-container h3 {
-  font-weight: 500;
-  font-size: 1.6rem;
+.abc-info-title {
+  font-weight: bold;
+}
+
+.abc-call-info {
+  font-weight: normal;
 }
 
 .abc-feeback-score {
