--- a/ac-front-end/src/styles/Recordings/RecordingsChart.css
+++ b/ac-front-end/src/styles/Recordings/RecordingsChart.css
@@ -23,8 +23,7 @@ Style to display HTML elements for RecordingsChart.js.
   overflow: hidden;
   font-size: var(--sub-option-text);
   box-shadow: 0 2.4rem 4.8rem rgb(0 0 0 / 8%);
-  /* margin-top: 2rem; */
-  padding: 2rem 1rem;
+  /* padding: 2rem 1rem; */
 }
 
 .recc-container {
@@ -32,7 +31,7 @@ Style to display HTML elements for RecordingsChart.js.
   flex-direction: column;
   gap: 1rem;
   color: var(--text-color);
-  padding: 2rem;
+  padding: 3rem;
 }
 
 .recc-navbar {
@@ -51,6 +50,7 @@ Style to display HTML elements for RecordingsChart.js.
 }
 
 .recc-title:nth-child(1) {
+  /* font-size: var(--sub-option-text); */
   color: var(--highlight-color);
   cursor: pointer;
 }
