--- a/ac-front-end/src/styles/Recordings/RecordingsVideo.css
+++ b/ac-front-end/src/styles/Recordings/RecordingsVideo.css
@@ -157,4 +157,36 @@ Style to display HTML elements for RecordingsVideo.js.
     width: 80rem;
     height: 40rem;
   }
+
+  .rev-sub-left-container {
+    width: 600px;
+    height: 450px;
+  }
+
+  #rec-frame {
+    width: 1300px;
+    height: 786px;
+
+    -ms-transform: scale(0.49);
+    -moz-transform: scale(0.49);
+    -o-transform: scale(0.49);
+    -webkit-transform: scale(0.49);
+    transform: scale(0.49);
+  }
+}
+
+@media (max-width: 73em) {
+  .rev-sub-left-container {
+    width: 400px;
+    height: 350px;
+  }
+
+  #rec-frame {
+    width: 900px;
+    height: 700px;
+  }
+
+  .abc-main-container {
+    width: 25rem;
+  }
 }
