improvement in interface
Co-Authored-By: Jared Flores <90533617+JaredFG@users.noreply.github.com>
Co-Authored-By: Daniel García Barajas <77995765+DanielGB-Dev@users.noreply.github.com>

--- a/ac-front-end/src/styles/AgentList/AgentListMenu.css
+++ b/ac-front-end/src/styles/AgentList/AgentListMenu.css
@@ -71,6 +71,7 @@ Style to display HTML elements for AgentListMenu.js.
   cursor: pointer;
   width: 15rem;
   height: 4rem;
+  transition: all 0.3s ease-out;
 }
 
 .aglm-refresh-btn:hover,
