--- a/ac-front-end/src/styles/Login/Login.css
+++ b/ac-front-end/src/styles/Login/Login.css
@@ -51,6 +51,7 @@ Style to display HTML elements for Login.js.
   border: none;
   border-radius: 10px;
   cursor: pointer;
+  text-decoration: none;
 }
 .log-about:hover {
   transform: translateY(-3px);
