--- a/ac-front-end/src/index.css
+++ b/ac-front-end/src/index.css
@@ -12,12 +12,10 @@ Last modification date: 09/06/2022
 Style to display HTML elements for index.js.
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&family=Karla:wght@400;500;600;700&family=Montserrat:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap");
-
 * {
   margin: 0;
   box-sizing: border-box;
-  font-family: "Karla", "Montserrat", sans-serif;
+  font-family: sans-serif;
 }
 
 ::-webkit-scrollbar {
